Switch to CMake FetchContent

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,1 +1,9 @@
-add_subdirectory(ConsoleMonitor)
+
+include(FetchContent)
+FetchContent_Declare(
+  ConsoleMonitor
+  GIT_REPOSITORY https://github.com/kooooootb/ConsoleMonitor.git
+  GIT_TAG        cf2ae34782d8cc140be698c912cef4b533ae8f94
+)
+
+FetchContent_MakeAvailable(ConsoleMonitor)
