--- a/src/commands/CMakeLists.txt
+++ b/src/commands/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(FSCommands)
+#project(FSCommands)
 
 # make library
 SET(FScommands_list
@@ -15,6 +15,6 @@ SET(FScommands_list
 add_library(FSCommands STATIC ${FScommands_list})
 
 # make utils visible in cpp
-include_directories("${monitor_SOURCE_DIR}/commands")
+include_directories("${Monitor_SOURCE_DIR}/monitor/commands")
 
 target_link_libraries(FSCommands commands_base)
