--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 project(FS VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 20)
-include_directories(include)
+include_directories(src)
 
 add_subdirectory(lib)
 
