--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,12 +29,14 @@ if(NOT CMAKE_CXX_EXTENSIONS)
     set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
 
-include_directories(.)
-
 # make commands directory visible in cmake
 add_subdirectory(commands) # includes adding util funcs
 
 #add_definitions(-DMONITOR_WITHFILE)
 
-add_executable(FS_main main.cpp Filesystem.cpp serializer/BinSerializer.cpp)
-target_link_libraries(FS_main monitor FSCommands)
+add_library(FS STATIC
+        Filesystem.cpp
+        serializer/BinSerializer.cpp)
+
+add_executable(FS_main main.cpp)
+target_link_libraries(FS_main monitor FSCommands FS)
