--- a/src/commands/CMakeLists.txt
+++ b/src/commands/CMakeLists.txt
@@ -8,8 +8,8 @@ SET(FScommands_list
 #        Empty.cpp
         Enter.cpp
 #        Copy.cpp
-#        Move.cpp
-#        Del.cpp
+        Move.cpp
+        Del.cpp
 #        Squeeze.cpp
         )
 add_library(FSCommands STATIC ${FScommands_list})
